--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>SpaceX Assignment</title>
 </head>
 <body>
     
@@ -54,7 +54,8 @@
             </aside>
 
             <section>
-                <div class="no-result">Result Not found..</div>
+                <div class="loading"><img src="https://loading.io/mod/spinner/rolling/sample.gif"  alt=""></div>
+                <div class="no-result">Result not found :( </div>
                 <div id="data"></div>
             </section>
         </main>
